--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -2,19 +2,18 @@
   <div class="container__big-card">
     <div class="big-card__photo">
       <img
-        src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
+        src="{{ photoCover }}"
         alt=""
         height="200px"
         srcset=""
       />
     </div>
     <div class="big-card__title">
-      <h1>Saiu a nova versão do Angular</h1>
+      <h1>{{ cardTitle }}</h1>
     </div>
     <div class="big-card__description">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam adipisci
-        deserunt natus ipsa fuga ab.
+        {{ cardDescription }}
       </p>
     </div>
   </div>
