--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,14 +2,14 @@
     <div class="container__small-card">
       <div class="small-card__photo">
         <img
-          src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
+          src="{{ photoCover}}"
           alt=""
           height="200px"
           srcset=""
         />
       </div>
       <div class="small-card__title">
-        <h1>Saiu a nova versão do Angular</h1>
+        <h1>{{ cardTitle }}</h1>
       </div>
     </div>
     <hr>
