--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,4 +1,4 @@
-<a href="#">
+<a [routerLink]="['content', Id]">
   <div class="container__big-card">
     <div class="big-card__photo">
       <img
