--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,14 +3,15 @@
 <div class="container__articles">
   <div class="articles__main">
     <app-big-card
+    Id="1"
       photoCover="https://www.freecodecamp.org/portuguese/news/content/images/size/w2000/2022/04/react-vs-angular.png"
       cardDescription="@Input no Angular é como uma props no Reactjs"
       cardTitle="@Input / Props - Angular / React"
     ></app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card cardTitle="Novo curso Angula" photoCover="https://assets-blog.hostgator.com.br/wp-content/uploads/2021/03/logo-angular-768x387.webp"></app-small-card>
-    <app-small-card photoCover="https://blog.logrocket.com/wp-content/uploads/2023/10/complete-guide-react-refs.png" cardTitle="Aperfeiçoando React"></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card Id="2"  cardTitle="Novo curso Angula" photoCover="https://assets-blog.hostgator.com.br/wp-content/uploads/2021/03/logo-angular-768x387.webp"></app-small-card>
+    <app-small-card Id="3" photoCover="https://blog.logrocket.com/wp-content/uploads/2023/10/complete-guide-react-refs.png" cardTitle="Aperfeiçoando React"></app-small-card>
+    <app-small-card Id="4"></app-small-card>
   </div>
 </div>
